Factored out history buttons. Fixed overflow of  playlist page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,10 +5,10 @@
 
 .outlet-section {
     position: fixed;
-    top: 0px;
+    top: 40px;
     left: 250px;
     width: calc(100vw - 250px);
-    height: 100vh;
+    height: calc(100vh - 40px);
     background-color: #030303;
 }
 
@@ -17,4 +17,12 @@ button {
     padding: 0;
     background: none;
     color: white;
+}
+
+.history-buttons {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 40px;
 }
