--- a/frontend/src/styles/home_page/HistoryButtonsStyle.css
+++ b/frontend/src/styles/home_page/HistoryButtonsStyle.css
@@ -1,9 +1,28 @@
 .history-buttons-container {
     display: flex;
+    width: 100%;
+    height: 40px;
     justify-content: flex-end;
-    color: white,
+    color: white;
+    background-color: #030303
 }
 
 .nav-buttons {
-    font-size: 25px;
+    margin-top: 5px;
+    font-size: 15px;
+}
+
+.nav-button-wrapper {
+    display: flex;
+    width: 25px;
+    height: 25px;
+    border-color: white;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 50%;
+    box-shadow: 3px 3px white;
+    align-content: center;
+    justify-content: center;
+    background-color: #252525;
+    margin-right: 10px;
 }
